# baserow

./: .gitignore  README.md
plugins/access_control/backend/: .gitkeep  pyproject.toml  setup.py
plugins/access_control/backend/src/access_control/: __init__.py  apps.py  data_masking_handler.py  exceptions.py  export_masking_handler.py  middleware.py  models.py  permission_manager.py  plugins.py  registry.py  row_permission_handler.py  ws_masking_handler.py  ws_permission_notify.py
plugins/access_control/backend/src/access_control/api/: __init__.py  errors.py  serializers.py  urls.py  views.py
plugins/access_control/backend/src/access_control/config/: __init__.py
plugins/access_control/backend/src/access_control/migrations/: 0001_initial.py  0002_add_table_permissions_to_workspace.py  0003_add_table_permissions_field.py  0004_remove_audit_log.py  0005_remove_deletable_permission.py  __init__.py
plugins/access_control/backend/tests/: __init__.py  conftest.py  test_data_masking.py  test_registry.py
plugins/ai_assistant/backend/: pyproject.toml  setup.py
plugins/ai_assistant/backend/src/ai_assistant/: __init__.py  config.py  handler.py  models.py  services.py  signals.py  tasks.py
plugins/ai_assistant/backend/src/ai_assistant/api/: serializers.py  urls.py  views.py
plugins/ai_assistant/backend/src/ai_assistant/migrations/: 0001_initial.py  0002_workflow_config.py  (+1 more)
plugins/excel_importer/backend/: pyproject.toml
plugins/excel_importer/backend/src/excel_importer/: __init__.py  config.py  exporter.py  serializers.py
plugins/row_author_tracker/backend/: pyproject.toml
plugins/row_author_tracker/backend/src/row_author_tracker/: __init__.py  config.py  field_types.py  models.py  signals.py
plugins/table_mapper/backend/: pyproject.toml  setup.py
plugins/table_mapper/backend/src/table_mapper/: __init__.py  apps.py  config.py  handler.py  models.py  signals.py  tasks.py
(+151 files in other folders)
