[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "baserow-ai-assistant"
version = "0.1.0"
description = "AI Assistant Plugin for Baserow"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
]

[tool.setuptools.packages.find]
where = ["src"]
