[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "baserow-excel-importer"
version = "0.1.0"
description = "Excel Import/Export Plugin for Baserow"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
