[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "baserow-row-author-tracker"
version = "1.0.0"
description = "Row Author Tracker Plugin for Baserow"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
